--- a/latex-code/ov.tex
+++ b/latex-code/ov.tex
@@ -1,12 +1,13 @@
 %% This is the main file and you use this file to organize your assignment.
 
-\documentclass[a4paper]{article}	  
-\usepackage[margin=3cm]{geometry} 	   % Choose your margin here. 
+\documentclass[a4paper]{article}
+\usepackage[margin=3cm]{geometry} 	   % Choose your margin here.
 \usepackage{amsmath}
 \usepackage{parskip}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{float}
 
 \newcommand{\figref}[1]{\figurename~\ref{#1}}
 
@@ -30,7 +31,7 @@ This is only a short template for the assignments and it is definitely not neces
 
 \input{problem1}	% Use "\include" instead of "\input" if you want the section to start on a new page. "problem1" is a tex file included at this location in the document. It is possible to answer the whole assignment in the main file (paste everything from "problem1.tex" and "problem2.tex" here), but that restricts the readability. Therefore, one file is created for each problem.
 \include{problem2}
- 
+
 \bibliographystyle{IEEEtran}
 \bibliography{bibliography.bib}
 
