--- a/latex-code/problem1.tex
+++ b/latex-code/problem1.tex
@@ -52,33 +52,35 @@ K_d = \frac{2 \xi \omega_n - 1}{K' \frac{U}{L_{pp}}}.
 \end{aligned}\end{equation}
 Since this control input will be input into a physical rudder, we have to saturate $\delta_c$ between the minimum and maximum rudder angles $-\delta_{\text{max}}$ and $\delta_{\text{max}}$. In addition, we could add rate limitation to the input, but we have not implemented this.
 
+\subsection{}
+We implement the controller as a simulink block and drive it with the reference
+\begin{equation}\begin{aligned}
+\psi_d(t) = 0.4 \sin (0.004t), \quad \text{and} \quad
+r_d(t) = \dot \psi_d(t).
+\end{aligned}\end{equation}
+This, when simulated with current turned on, results in the heading shown in \figref{fig:heading1_4}. As we can see, we achieve acceptable tracking of the commanded heading. \figref{fig:rudder1_4} shows how the commanded rudder maxes out within the saturation limits. This is however not a problem for the heaidng controller.
 
 
 \begin{figure}[ht]
 	\centering
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{fig1}
-		\caption{caption..}
-		\label{fig:2a}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{heading1_4}
+		\caption{Heading}
+		\label{fig:heading1_4}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{heading_rate1_4}
+		\caption{Heading rate}
+		\label{fig:heading_rate1_4}
+	\end{subfigure}%
+        ~
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{rudder1_4}
+		\caption{Rudder with saturation}
+		\label{fig:rudder1_4}
 	\end{subfigure}
-	~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
-	%(or a blank line to force the subfigure onto a new line)
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{fig1}
-		\caption{caption..}
-		\label{fig:2b}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{fig1}
-		\caption{caption..}
-		\label{fig:2c}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{fig1}
-		\caption{caption..}
-		\label{fig:2d}
-	\end{subfigure}
-	\caption{Caption for all figures}\label{fig:2}
+	\caption{Heading controller results}\label{fig:2}
 \end{figure}
 
 
