--- a/latex-code/problem1.tex
+++ b/latex-code/problem1.tex
@@ -84,5 +84,11 @@ This, when simulated with current turned on, results in the heading shown in \fi
 	\caption{Heading controller results}\label{fig:2}
 \end{figure}
 
+\subsection{}
+To simplify further analysis, we hope to be able to fit a first order model to the surge dynamics. That is a model of the form
+\begin{equation}\begin{aligned}
+\frac{u}{n_c}(s) = \frac{K_u}{1 + T_u s},
+\end{aligned}\end{equation}
+where $u$ is surge speed and $n_c$ is the commanded shaft speed.
 
 
