--- a/latex-code/problem2.tex
+++ b/latex-code/problem2.tex
@@ -1,6 +1,34 @@
-\section*{Problem 2 - Straight-line path following in the horizontal plane}
-Answer Problem 2 in this file. 
+\section*{Problem 2 - Path Following with Crab angle Compensation}
 \subsection*{Problem 2.1}
+We implement a LOS guidance system using lookahead-based steering. The principle of this method is to move from one waypoint to the next by finding the LOS vector, and setting the desired course to move the vessel along this vector. Using the lookahead-based steering method, we separate the desired course a sum of the path-tangential angle and the velocity-path relative angle. The path-tangential angle can easily be found as the angle between the two waypoints, while the velocity-path relative angle can be found as using arctan of minus the cross-track error, divided by the distance between where the cross-track error and the LOS vector intercepts the line between the waypoints. 
+
+We ended up choosing the same radius for all waypoints, set to be slightly larger than double the length of the vessel. Furthermore, we also limited delta to be between 0 and R. 
+
+\subsection{Problem 2.2}
+% \begin{figure}[ht]
+% 	\centering
+% 	\begin{subfigure}[b]{0.3\textwidth}
+% 		\includegraphics[width=\textwidth]{}
+% 		\caption{Heading}
+% 		\label{fig:heading1_4}
+% 	\end{subfigure}%
+% 	~
+% 	\begin{subfigure}[b]{0.3\textwidth}
+% 		\includegraphics[width=\textwidth]{heading_rate1_4}
+% 		\caption{Heading rate}
+% 		\label{fig:heading_rate1_4}
+% 	\end{subfigure}%
+%         ~
+% 	\begin{subfigure}[b]{0.3\textwidth}
+% 		\includegraphics[width=\textwidth]{rudder1_4}
+% 		\caption{Rudder with saturation}
+% 		\label{fig:rudder1_4}
+% 	\end{subfigure}
+% 	\caption{Heading controller results}\label{fig:2}
+% \end{figure}
+
+
+
 Answer problem 2.1 here. The Greek letters for sideslip, heading and course are $\beta$, $\psi$ and $\chi$, respectively. Equation (10) in the assignment is:
 \begin{equation}
 \label{y_kinematics}
