--- a/latex-code/problem2.tex
+++ b/latex-code/problem2.tex
@@ -5,27 +5,22 @@ We implement a LOS guidance system using lookahead-based steering. The principle
 We ended up choosing the same radius for all waypoints, set to be slightly larger than double the length of the vessel. Furthermore, we also limited delta to be between 0 and R. 
 
 \subsection{Problem 2.2}
-% \begin{figure}[ht]
-% 	\centering
-% 	\begin{subfigure}[b]{0.3\textwidth}
-% 		\includegraphics[width=\textwidth]{}
-% 		\caption{Heading}
-% 		\label{fig:heading1_4}
-% 	\end{subfigure}%
-% 	~
-% 	\begin{subfigure}[b]{0.3\textwidth}
-% 		\includegraphics[width=\textwidth]{heading_rate1_4}
-% 		\caption{Heading rate}
-% 		\label{fig:heading_rate1_4}
-% 	\end{subfigure}%
-%         ~
-% 	\begin{subfigure}[b]{0.3\textwidth}
-% 		\includegraphics[width=\textwidth]{rudder1_4}
-% 		\caption{Rudder with saturation}
-% 		\label{fig:rudder1_4}
-% 	\end{subfigure}
-% 	\caption{Heading controller results}\label{fig:2}
-% \end{figure}
+See \figref{fig:path_2_2} for the path of the vessel, and \figref{fig:cross_track_error2_2} for the cross-track error 
+
+\begin{figure}[ht]
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{path_2_2}
+		\caption{Path and waypoints}
+		\label{fig:path_2_2}
+	\end{subfigure}%
+        ~
+	\begin{subfigure}[b]{0.3\textwidth}
+		\includegraphics[width=\textwidth]{cross_track_error2_2}
+		\caption{Rudder with saturation}
+		\label{fig:cross_track_error2_2}
+	\end{subfigure}
+	\caption{Cross-track error}\label{fig:task2_2}
+\end{figure}
 
 
 
