Small change to plot

--- a/latex-code/problem2.tex
+++ b/latex-code/problem2.tex
@@ -19,9 +19,9 @@ See \figref{fig:path_2_2} for the path of the vessel, and \figref{fig:cross_trac
 		\caption{Rudder with saturation}
 		\label{fig:cross_track_error2_2}
 	\end{subfigure}
-	\caption{Cross-track error}\label{fig:task2_2}
+	\caption{Cross-track error}
+	\label{fig:task2_2}
 \end{figure}
-
 
 
 Answer problem 2.1 here. The Greek letters for sideslip, heading and course are $\beta$, $\psi$ and $\chi$, respectively. Equation (10) in the assignment is:
