Minor text-change

--- a/latex-code/problem2.tex
+++ b/latex-code/problem2.tex
@@ -93,7 +93,7 @@ For this task we implemented the pure-pursuit target-tracking system. The distan
 	~
 	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\textwidth]{x_y_distance_to_target2_7}
-		\caption{Distance to target in x and y}
+		\caption{Distance to target, x and y}
 		\label{fig:x_y_distance_to_target2_7}
 	\end{subfigure}
 	\label{fig:task2_7}
