--- a/latex-code/problem2.tex
+++ b/latex-code/problem2.tex
@@ -75,7 +75,7 @@ The oscillations in the system were undesirable, but we couldn't really find a w
 
 \section*{Problem 2.3 - Target Tracking}
 \subsection*{Problem 2.7}
-For this task we implemented the pure-pursuit target-tracking system. The distance to target is set to two times the boat length. 
+For this task we implemented the pure-pursuit target-tracking system. The distance to target is set to two times the boat length. See \figref{fig:path_2_6} for the total path, \figref{fig:distance_to_target2_7} for the absolute distance to the target and \figref{fig:x_y_distance_to_target2_7} for the distance in x and in y. 
 
 \begin{figure}[ht]
 	\begin{subfigure}[b]{0.3\textwidth}
